eks_script_20230814/eureka-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-eureka-1
  labels:
    app: eks-eureka-1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-eureka-1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: eks-eureka-1
    spec:
      serviceAccountName: spring-cloud
      containers:
      - image: 328169871404.dkr.ecr.us-east-1.amazonaws.com/eureka-eks:latest
        imagePullPolicy: Always
        name: eks-eureka-1
        command: ["/bin/sh","-c"]
        args: ["/springCloud/env.sh"]
        # command: ["/bin/sh","-c","while : ; do date >> /tmp/test.txt; sleep 1; done;"]
        ports:
        - containerPort: 8761
          protocol: TCP
