eks_script_20230814/hello-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      serviceAccountName: spring-cloud
      affinity: 
        nodeAffinity: 
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms: 
              - matchExpressions: 
                  - key: type #node节点的标签 
                    operator: In 
                    values: 
                      - gpu
      containers:
      - image: 328169871404.dkr.ecr.us-east-1.amazonaws.com/hello-app-eks:latest
        imagePullPolicy: Always
        name: hello-app
        command: ["/bin/sh","-c"]
        args: ["/springCloud/env.sh"]
        # command: ["/bin/sh","-c","while : ; do date >> /tmp/test.txt; sleep 1; done;"]
        ports:
        - containerPort: 8080
          protocol: TCP
