eks_script_20230814/api-gateway-service-nlb-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service-nlb-internal
  annotations: 
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"

spec:
  selector:
    app: api-gateway
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 8081
      targetPort: 8081
