eks_script_20230814/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service

spec:
  selector:
    app: api-gateway
  type: NodePort
  ports:
   -  protocol: TCP
      port: 8081
      targetPort: 8081
