eks_script_20230814/eureka-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-eureka-2
spec:
  selector:
    app: eks-eureka-2
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 8761
      targetPort: 8761
